--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,32 @@
+body {
+  background: linear-gradient(to bottom, #323232 0%, #3f3f3f 40%, #1c1c1c 150%),
+    linear-gradient(
+      to top,
+      rgba(255, 255, 255, 0.4) 0%,
+      rgba(0, 0, 0, 0.25) 200%
+    );
+  background-blend-mode: multiply;
+}
 
+.App {
+  padding-top: 30px;
+  max-width: 500px;
+  margin: 40px auto;
+}
+
+.App footer {
+  font-family: Candara;
+  color: rgb(246, 233, 233);
+  text-align: center;
+  font-size: 12px;
+  margin: 20px 0;
+}
+
+.App a {
+  background-color: rgb(198, 255, 255);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  text-shadow: rgba(5, 5, 5, 0.5) 0px 3px 3px;
+}
