--- a/src/Weather.css
+++ b/src/Weather.css
@@ -8,11 +8,9 @@
   font-family: Candara;
   border: -3px solid #878787;
   color: rgb(204, 189, 189);
-  padding: 16px;
   max-width: 600px;
   border-radius: 5px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 30px 30px 30px 30px;
 }
 
 .Weather h1 {
@@ -63,7 +61,7 @@
   color: rgb(255, 255, 193);
   text-align: center;
   font-size: 18px;
-  margin-bottom: 22px;
+  margin-bottom: 32px;
   background-color: rgb(213, 223, 223);
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -85,8 +83,25 @@
   text-shadow: rgba(26, 27, 27, 0.5) 0px 3px 3px;
 }
 
-.Weather form {
-  margin-bottom: 20px;
+.Weather .form-control {
+  border: 1px solid;
+  font-size: 20px;
+  background-color: rgb(213, 223, 223);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  text-shadow: rgba(26, 27, 27, 0.5) 0px 3px 3px;
+}
+.Weather .btn {
+  border: 0.5px solid;
+  font-size: 18px;
+  background-color: #171818;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  text-shadow: rgba(255, 255, 255, 0.5) 0px 3px 3px;
 }
 
 .Weather .temperature {
