--- a/src/Weather.css
+++ b/src/Weather.css
@@ -17,7 +17,7 @@
   text-align: center;
   display: block;
   font-family: arial, sans-serif;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 400;
   margin: 20px 0 0 0;
   line-height: 29px;
@@ -48,7 +48,8 @@
 
 .Weather .coord {
   text-align: center;
-  font-size: 14px;
+  font-size: 15px;
+  padding-top: 3px;
   background-color: #171818;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -60,7 +61,8 @@
 .Weather .date {
   color: rgb(255, 255, 193);
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
+  padding-top: 3px;
   margin-bottom: 32px;
   background-color: rgb(213, 223, 223);
   -webkit-background-clip: text;
@@ -72,7 +74,7 @@
 
 .Weather .text-capitalize {
   color: rgb(166, 247, 240);
-  font-size: 23px;
+  font-size: 25px;
   line-height: 19px;
   list-style: none;
   background-color: rgb(213, 223, 223);
