--- a/src/Weather.css
+++ b/src/Weather.css
@@ -11,6 +11,7 @@
   max-width: 600px;
   border-radius: 5px;
   padding: 20px 30px 30px 30px;
+  box-shadow: 30px 30px 30px 0px rgba(5, 5, 5, 0.5);
 }
 
 .Weather h1 {
