--- a/src/Weather.css
+++ b/src/Weather.css
@@ -49,6 +49,7 @@
 .Weather .coord {
   text-align: center;
   font-size: 15px;
+  padding-top: 3px;
   margin-bottom: 3px;
   background-color: #171818;
   -webkit-background-clip: text;
