--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,20 @@ body {
   font-family: Candara;
   color: rgb(246, 233, 233);
   text-align: center;
-  font-size: 12px;
+  font-size: 13px;
   margin: 15px 0;
 }
 
 .App a {
-  background-color: rgb(255, 233, 243);
+  background-color: rgb(255, 191, 202);
   -webkit-background-clip: text;
   -moz-background-clip: text;
   background-clip: text;
   color: transparent;
   text-shadow: rgba(5, 5, 5, 0.5) 0px 3px 3px;
+}
+.App p {
+  font-size: 14px;
+  color: rgb(255, 255, 250);
+  margin-left: 380px;
 }
