--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,13 +1,12 @@
 .Weather {
   background-image: linear-gradient(
     -225deg,
-    #a445b2 0%,
-    #d41872 52%,
-    #ff0066 100%
+    #933ca0 0%,
+    #bd266f 52%,
+    #dd2971 100%
   );
   font-family: Candara;
   border: -3px solid #878787;
-  color: rgb(204, 189, 189);
   max-width: 600px;
   border-radius: 5px;
   padding: 20px 30px 30px 30px;
@@ -37,6 +36,7 @@
 .Weather li {
   font-size: 18px;
   line-height: 19px;
+  padding-bottom: 5px;
   list-style: none;
   background-color: rgb(213, 223, 223);
   -webkit-background-clip: text;
@@ -63,7 +63,7 @@
   color: rgb(255, 255, 193);
   text-align: center;
   font-size: 20px;
-  margin-bottom: 32px;
+  margin-bottom: 35px;
   background-color: rgb(213, 223, 223);
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -74,8 +74,9 @@
 
 .Weather .text-capitalize {
   color: rgb(166, 247, 240);
-  font-size: 25px;
+  font-size: 27px;
   line-height: 19px;
+  padding-bottom: 10px;
   list-style: none;
   background-color: rgb(213, 223, 223);
   -webkit-background-clip: text;
@@ -88,19 +89,19 @@
 .Weather .form-control {
   text-align: center;
   border: 0.5px transparent;
-  font-size: 18px;
-  background-color: rgb(255, 145, 182);
+  font-size: 20px;
+  background-color: rgb(214, 119, 168);
   -webkit-background-clip: text;
   -moz-background-clip: text;
   background-clip: text;
   color: transparent;
-  text-shadow: rgba(26, 27, 27, 0.5) 0px 3px 3px;
+  text-shadow: rgba(8, 8, 8, 0.5) 0px 3px 3px;
 }
 
 .Weather .btn {
   border: 0.5px transparent;
-  font-size: 16px;
-  margin-left: 20px;
+  font-size: 18px;
+  margin-left: 15px;
   background-color: #1f1d1d;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -111,7 +112,6 @@
 
 .Weather .temperature {
   font-weight: bold;
-  color: #565858;
   font-size: 65px;
   line-height: 50px;
   font-weight: 400;
