--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,6 +1,9 @@
 .WeatherForecast {
   text-align: center;
+  color: #a5a5a5;
+  font-size: 18px;
   margin: 35px 0;
+  padding-top: 5px;
 }
 
 .WeatherForecast canvas {
